--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>My test page</title>
   </head>
   <body>
-    <img src="images/img.png" alt="My test image">
+    <img src="images/img.jpeg" alt="My test image">
   </body>
 </html>
